--- a/index.html
+++ b/index.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase 15</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="css\main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Roboto:ital,wght@0,100;0,300;0,700;1,100&display=swap" rel="stylesheet">    
+    <title>Laboratorio Dental Sarcone</title>
 </head>
-<body>
+
+<body class="grid">
+    <!-- Título principal de la web -->
+    <header id="grillaheader" class="header">
+        <a class="header__logo" href="index.html"><img class="header__logo" src="Images\Dental Braces.png" alt="Logo" title="Logo"> </a> 
+        <h1 class= "header__titulo">Laboratorio <br>Dental<br>Sarcone</h1>  
+    </header>
+
+    <!-- Menú para navegar por la web -->
+
+    <nav id ="menuGrilla" class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span>Menú</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="Pages\Nuestros_Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Productos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <li><a class="dropdown-item" href="Pages\Nuestros_Productos.html#protesisRemovibles">Prótesis</a></li>
+                          <li><a class="dropdown-item" href="Pages\Nuestros_Productos.html#placasRelajacion">Placas</a></li>                        
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="Pages\Quienes_somos.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Pages\Contactanos.html">Contactanos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Pages\Trabaja_con_nosotros.html">Enviá tu CV</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Fin de Menú para navegar por la web -->
     
+    <!-- Sección de "Bienvenida" --> 
+    <section id="grillabv" class="cuerpo__bienvenidos">
+        <h3 class="cuerpo__bienvenidos animate__animated animate__bounce">¡Bienvenidos!</h3>
+    </section>
+
+    <!-- Introducción a la empresa (video)-->
+    <section id="videogrilla">
+        <video  src="Videos\Video_home1.mp4" class="video-controls animate__animated" muted="true" loop="true" autoplay></video>
+    </section>
+
+    <!-- Introduccción a la empresa (wording)-->
+    <section id="descripgrilla" class="cuerpo__descripcionEmpresa">
+        <p class="cuerpo__descripcionEmpresa">Somos una organización familiar con más de 20 años de experiencia en el rubro.<br>Realizamos todo tipo de prótesis removibles y placas de relajación
+        </p>
+    </section>  
+    <!-- Fin de sección de introducción a la empresa -->
+
+    <!-- Pie de página con información de contacto, ubicación, redes sociales -->
+    <footer id="grillafooter"> 
+        <div class="footer__cuerpo">
+            <div class="footer__cuerpo__redes">
+                <p><b>Encontranos en las redes sociales</b></p>
+                <img class="footer__cuerpo__redes__whatsapp" src="Images\whatsapp.PNG"> Whatsapp: (011) 15-6114-xxxx
+                <p><a class="footer__cuerpo__redes__instagram" href="https://www.instagram.com/laboratoriodentalsarcone/"><img class="footer__cuerpo__redes__instagram" src="Images\instagram.PNG"> Instagram</p></a>   
+            </div>
+            <div class="footer__cuerpo__ubicacion">
+                <p><b>Dónde estamos</b></p>
+                <p>San josé de Calasanz 110 </p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105002.46507826321!2d-58.56875610790173!3d-34.671694771284564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc8a0bb4961af%3A0xa5402e42199b10e5!2sPinturer%C3%ADa%20La%20Rotonda!5e0!3m2!1ses!2sar!4v1618985600773!5m2!1ses!2sar"  width="40" height="40" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
